k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deplo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app-deplo
  template:
    metadata:
      labels:
        app: web-app-deplo
    spec:
      containers:
        - name: web-app
          image: adhaammohammed/vote-app
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
