k8s/Statefulset_db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres-service
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: mypvc
