k8s/deplo-services.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  selector:
    app: web-app-deplo
  type: LoadBalancer
  ports:
      - port: 80
        targetPort: 5000
